--- a/Zero.ini
+++ b/Zero.ini
@@ -1,13 +1,13 @@
-;*********************************************************************
-;Comments are to be parsed out
-[Rocket]    ;A comment about the Rocket...
-<Model>  ;put some contents here to make sure to ignore
-<Stages>
-<Empty Weight>
-<Full  Weight>
-[Launching Mechanism] ;Will need to figure out how to ignore comments
-<Model>
-<NumberOfHolds>
-<AngleOfHolds>
-;Lots more to put here
-;*********************************************************************
+{
+   "rocket":{
+      "model":"<Model>"
+      "stages":"<Stages>"
+      "empty_weight":"<Empty Weight>"
+      "full_weight":"<Full Weight>"
+   }
+   "launching_mechanism":{
+      "model":"<Model>"
+      "number_of_holds":"<Number of Holds>"
+      "angle_of_holds":"<Angle of Holds>"
+   }
+}
